src/parser/MailjetTemplateParser.js
// Generated from src/grammars/MailjetTemplate.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import MailjetTemplateListener from './MailjetTemplateListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class MailjetTemplateParser extends antlr4.Parser {

    static grammarFileName = "MailjetTemplate.g4";
    static literalNames = [ null, "'var:'", "':'", "'|'", "'params.'", "'('", 
                            "','", "')'", "'in'", "'range'", "'item.'", 
                            "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                            "'true'", "'false'", "'{{'", "'}}'", null, null, 
                            null, null, null, null, null, null, "'%}'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "VAR_START", "VAR_END", "IF_START", 
                             "ELSEIF_START", "ELSE_IF_START", "ELIF_START", 
                             "ELSE_START", "END_IF", "FOR_START", "END_FOR", 
                             "BLOCK_END", "IDENTIFIER", "STRING", "NUMBER", 
                             "WS", "ESC", "COMMENT", "HTML_TAG", "MJML_TAG", 
                             "TEXT" ];
    static ruleNames = [ "template", "templateElement", "text", "comment", 
                         "variable", "filter", "filterName", "filterArg", 
                         "ifBlock", "elseIfBlock", "elseBlock", "forBlock", 
                         "rangeArgs", "expression", "comparisonOp", "value", 
                         "htmlTag", "identifier" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MailjetTemplateParser.ruleNames;
        this.literalNames = MailjetTemplateParser.literalNames;
        this.symbolicNames = MailjetTemplateParser.symbolicNames;
    }



	template() {
	    let localctx = new TemplateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, MailjetTemplateParser.RULE_template);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	            this.state = 36;
	            this.templateElement();
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	templateElement() {
	    let localctx = new TemplateElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, MailjetTemplateParser.RULE_templateElement);
	    try {
	        this.state = 48;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 38:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 42;
	            this.text();
	            break;
	        case 35:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 43;
	            this.comment();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 44;
	            this.variable();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 45;
	            this.ifBlock();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 46;
	            this.forBlock();
	            break;
	        case 36:
	        case 37:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 47;
	            this.htmlTag();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	text() {
	    let localctx = new TextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, MailjetTemplateParser.RULE_text);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.match(MailjetTemplateParser.TEXT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, MailjetTemplateParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(MailjetTemplateParser.COMMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, MailjetTemplateParser.RULE_variable);
	    var _la = 0;
	    try {
	        this.state = 86;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new MailjetVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 54;
	            this.match(MailjetTemplateParser.VAR_START);
	            this.state = 55;
	            this.match(MailjetTemplateParser.T__0);
	            this.state = 56;
	            this.identifier();
	            this.state = 59;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 57;
	                this.match(MailjetTemplateParser.T__1);
	                this.state = 58;
	                this.match(MailjetTemplateParser.STRING);
	            }

	            this.state = 61;
	            this.match(MailjetTemplateParser.VAR_END);
	            break;

	        case 2:
	            localctx = new SimpleVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 63;
	            this.match(MailjetTemplateParser.VAR_START);
	            this.state = 64;
	            this.identifier();
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===3) {
	                this.state = 65;
	                this.match(MailjetTemplateParser.T__2);
	                this.state = 66;
	                this.filter();
	                this.state = 71;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 72;
	            this.match(MailjetTemplateParser.VAR_END);
	            break;

	        case 3:
	            localctx = new BrevoVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 74;
	            this.match(MailjetTemplateParser.VAR_START);
	            this.state = 75;
	            this.match(MailjetTemplateParser.T__3);
	            this.state = 76;
	            this.identifier();
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===3) {
	                this.state = 77;
	                this.match(MailjetTemplateParser.T__2);
	                this.state = 78;
	                this.filter();
	                this.state = 83;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 84;
	            this.match(MailjetTemplateParser.VAR_END);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filter() {
	    let localctx = new FilterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, MailjetTemplateParser.RULE_filter);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.filterName();
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 89;
	            this.match(MailjetTemplateParser.T__4);
	            this.state = 90;
	            this.filterArg();
	            this.state = 95;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 91;
	                this.match(MailjetTemplateParser.T__5);
	                this.state = 92;
	                this.filterArg();
	                this.state = 97;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 98;
	            this.match(MailjetTemplateParser.T__6);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filterName() {
	    let localctx = new FilterNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, MailjetTemplateParser.RULE_filterName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filterArg() {
	    let localctx = new FilterArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, MailjetTemplateParser.RULE_filterArg);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	            this.state = 104;
	            this.match(MailjetTemplateParser.STRING);
	            break;
	        case 32:
	            this.state = 105;
	            this.match(MailjetTemplateParser.NUMBER);
	            break;
	        case 30:
	            this.state = 106;
	            this.identifier();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifBlock() {
	    let localctx = new IfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, MailjetTemplateParser.RULE_ifBlock);
	    var _la = 0;
	    try {
	        this.state = 171;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new MailjetIfBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 109;
	            this.match(MailjetTemplateParser.IF_START);
	            this.state = 110;
	            this.match(MailjetTemplateParser.T__0);
	            this.state = 111;
	            this.expression();
	            this.state = 112;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 113;
	                this.templateElement();
	                this.state = 118;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 122;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 29360128) !== 0)) {
	                this.state = 119;
	                this.elseIfBlock();
	                this.state = 124;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 125;
	                this.elseBlock();
	            }

	            this.state = 128;
	            this.match(MailjetTemplateParser.END_IF);
	            break;

	        case 2:
	            localctx = new BrevoIfBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 130;
	            this.match(MailjetTemplateParser.IF_START);
	            this.state = 131;
	            this.match(MailjetTemplateParser.T__3);
	            this.state = 132;
	            this.expression();
	            this.state = 133;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 137;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 134;
	                this.templateElement();
	                this.state = 139;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 29360128) !== 0)) {
	                this.state = 140;
	                this.elseIfBlock();
	                this.state = 145;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 147;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 146;
	                this.elseBlock();
	            }

	            this.state = 149;
	            this.match(MailjetTemplateParser.END_IF);
	            break;

	        case 3:
	            localctx = new NormalIfBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 151;
	            this.match(MailjetTemplateParser.IF_START);
	            this.state = 152;
	            this.expression();
	            this.state = 153;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 154;
	                this.templateElement();
	                this.state = 159;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 163;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 29360128) !== 0)) {
	                this.state = 160;
	                this.elseIfBlock();
	                this.state = 165;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 166;
	                this.elseBlock();
	            }

	            this.state = 169;
	            this.match(MailjetTemplateParser.END_IF);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseIfBlock() {
	    let localctx = new ElseIfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, MailjetTemplateParser.RULE_elseIfBlock);
	    var _la = 0;
	    try {
	        this.state = 200;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 22:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 173;
	            this.match(MailjetTemplateParser.ELSEIF_START);
	            this.state = 174;
	            this.expression();
	            this.state = 175;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 179;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 176;
	                this.templateElement();
	                this.state = 181;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 182;
	            this.match(MailjetTemplateParser.ELSE_IF_START);
	            this.state = 183;
	            this.expression();
	            this.state = 184;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 185;
	                this.templateElement();
	                this.state = 190;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 191;
	            this.match(MailjetTemplateParser.ELIF_START);
	            this.state = 192;
	            this.expression();
	            this.state = 193;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 197;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 194;
	                this.templateElement();
	                this.state = 199;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseBlock() {
	    let localctx = new ElseBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, MailjetTemplateParser.RULE_elseBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 202;
	        this.match(MailjetTemplateParser.ELSE_START);
	        this.state = 203;
	        this.match(MailjetTemplateParser.BLOCK_END);
	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	            this.state = 204;
	            this.templateElement();
	            this.state = 209;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forBlock() {
	    let localctx = new ForBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, MailjetTemplateParser.RULE_forBlock);
	    var _la = 0;
	    try {
	        this.state = 267;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,28,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new MailjetForBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 210;
	            this.match(MailjetTemplateParser.FOR_START);
	            this.state = 211;
	            this.identifier();
	            this.state = 212;
	            this.match(MailjetTemplateParser.T__7);
	            this.state = 213;
	            this.match(MailjetTemplateParser.T__0);
	            this.state = 214;
	            this.identifier();
	            this.state = 215;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 219;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 216;
	                this.templateElement();
	                this.state = 221;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 222;
	            this.match(MailjetTemplateParser.END_FOR);
	            break;

	        case 2:
	            localctx = new BrevoForBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 224;
	            this.match(MailjetTemplateParser.FOR_START);
	            this.state = 225;
	            this.identifier();
	            this.state = 226;
	            this.match(MailjetTemplateParser.T__7);
	            this.state = 227;
	            this.match(MailjetTemplateParser.T__3);
	            this.state = 228;
	            this.identifier();
	            this.state = 229;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 233;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 230;
	                this.templateElement();
	                this.state = 235;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 236;
	            this.match(MailjetTemplateParser.END_FOR);
	            break;

	        case 3:
	            localctx = new NormalForBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 238;
	            this.match(MailjetTemplateParser.FOR_START);
	            this.state = 239;
	            this.identifier();
	            this.state = 240;
	            this.match(MailjetTemplateParser.T__7);
	            this.state = 241;
	            this.identifier();
	            this.state = 242;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 246;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 243;
	                this.templateElement();
	                this.state = 248;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 249;
	            this.match(MailjetTemplateParser.END_FOR);
	            break;

	        case 4:
	            localctx = new RangeForBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 251;
	            this.match(MailjetTemplateParser.FOR_START);
	            this.state = 252;
	            this.identifier();
	            this.state = 253;
	            this.match(MailjetTemplateParser.T__7);
	            this.state = 254;
	            this.match(MailjetTemplateParser.T__8);
	            this.state = 255;
	            this.match(MailjetTemplateParser.T__4);
	            this.state = 256;
	            this.rangeArgs();
	            this.state = 257;
	            this.match(MailjetTemplateParser.T__6);
	            this.state = 258;
	            this.match(MailjetTemplateParser.BLOCK_END);
	            this.state = 262;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 19)) & ~0x1f) === 0 && ((1 << (_la - 19)) & 983301) !== 0)) {
	                this.state = 259;
	                this.templateElement();
	                this.state = 264;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 265;
	            this.match(MailjetTemplateParser.END_FOR);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeArgs() {
	    let localctx = new RangeArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, MailjetTemplateParser.RULE_rangeArgs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 269;
	        this.match(MailjetTemplateParser.NUMBER);
	        this.state = 276;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 270;
	            this.match(MailjetTemplateParser.T__5);
	            this.state = 271;
	            this.match(MailjetTemplateParser.NUMBER);
	            this.state = 274;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===6) {
	                this.state = 272;
	                this.match(MailjetTemplateParser.T__5);
	                this.state = 273;
	                this.match(MailjetTemplateParser.NUMBER);
	            }

	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, MailjetTemplateParser.RULE_expression);
	    try {
	        this.state = 291;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,31,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new IdentifierExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 278;
	            this.identifier();
	            break;

	        case 2:
	            localctx = new ItemPropertyExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 279;
	            this.match(MailjetTemplateParser.T__9);
	            this.state = 280;
	            this.identifier();
	            break;

	        case 3:
	            localctx = new ComparisonExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 281;
	            this.identifier();
	            this.state = 282;
	            this.comparisonOp();
	            this.state = 283;
	            this.value();
	            break;

	        case 4:
	            localctx = new ItemComparisonExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 285;
	            this.match(MailjetTemplateParser.T__9);
	            this.state = 286;
	            this.identifier();
	            this.state = 287;
	            this.comparisonOp();
	            this.state = 288;
	            this.value();
	            break;

	        case 5:
	            localctx = new ValueExprContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 290;
	            this.value();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comparisonOp() {
	    let localctx = new ComparisonOpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, MailjetTemplateParser.RULE_comparisonOp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 293;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 129024) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


